# kaggle

./: .gitignore  pyproject.toml
digit-recognizer/: script.py
store-sales-time-series-forecasting/: notebook.ipynb  script.ipynb  script.py  script.qmd
titanic/: script.py
